k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xebikart-state-api
  labels:
    app: xebikart
    tier: state-api
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: xebikart
    tier: state-api
