k8s-manifests/virtualservice-istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: xebikart-state-api-istio-vs
spec:
  hosts:
    - "state.xebik.art"
    - "state.istio.xebik.art"
  gateways:
    - xebikart-gateway
  http:
    - route:
      - destination:
          host: xebikart-state-api
